test/should_fail/literal_char.erl
-module(literal_char).

-export([f/0]).

-spec f() -> ok.
f() -> $c.
